--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.0",
 		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.11.16",
 		"@mui/material": "^5.12.3",
 		"@reduxjs/toolkit": "^1.9.5",
 		"formik": "^2.2.9",
