--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "SocialStream_Frontend",
+	"name": "socialstream_frontend",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
